2006-02-23  Anthony Balkissoon  <abalkiss@redhat.com>

	* java/math/BigDecimal.java:
	(toString): Fixed a problem where the negative sign was being displayed
	twice in the exponent.
	(toEngineeringString): New method.
	(toPlainString): Likewise.
	(pow): Likewise.

2006-02-23  Anthony Balkissoon  <abalkiss@redhat.com>

	* java/math/BigDecimal.java:
	(toString): Rewrote this method to behave as specified.  Added API
	comments to explain behaviour.
	(scaleByPowerOfTen): New method.

2006-02-22  Anthony Balkissoon  <abalkiss@redhat.com>

	* java/math/BigDecimal.java:
	(BigDecimal(char[], int, int, MathContext)): New constructor.
	(BigDecimal(char[], MathContext)): Likewise.
	(BigDecimal(char[])): Likewise.
	(BigDecimal(char[], int, int)): Likewise.
	(BigDecimal(String)): Fixed handling of exponent and scale.

2006-02-21  Anthony Balkissoon  <abalkiss@redhat.com>

	* java/math/BigDecimal.java:
	(mathContext): New field.
	(precision): Likewise.
	(BigDecimal(int)): New constructor.
	(BigDecimal(long)): Likewise.
	(BigDecimal(BigInteger)): Added API docs.
	(BigDecimal(BigInteger, int)): Removed incorrect NumberFormatException
	and added API docs.
	(plus): New method.
	(round): Likewise.
	(precision): Likewise.
	(valueOf): Likewise.
	(numDigitsInLong): New implementation method.

2006-02-21  Anthony Balkissoon  <abalkiss@redhat.com>

	* java/math/MathContext.java: New class.
	* java/math/RoundingMode: New Enum.

2006-01-15  Tom Tromey  <tromey@redhat.com>

	* javax/swing/text/html/HTMLDocument.java (parseBuffer): Genericized.
	* javax/swing/text/StyleContext.java (removeAttributes): Genericized.
	* java/beans/PersistenceDelegate.java (initialize): Genericized.
	* java/beans/Encoder.java (getPersistenceDelegate): Genericized.
	(setPersistenceDelegate): Likewise.

2006-01-15  Wolfgang Baer  <WBaer@gmx.de>

	* javax/print/attribute/standard/PrinterStateReasons.java: 
	(printerStateReasonSet): Genericize the return type.

2005-01-13  Mark Wielaard  <mark@klomp.org>
